# meg-phone-decoding

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: python-app.yml
src/mpd/: __init__.py  cli.py  config.py
src/mpd/data/: __init__.py  annotations.py  bourguignon2020.py  epochs.py
src/mpd/features/: frequency.py  preprocessing.py
src/mpd/models/: classical.py  nn_archs.py  training.py  utils.py
src/mpd/pipelines/: multiclass.py  pairwise.py  run.py
src/mpd/utils/: display.py
tests/: __init__.py  test_cli.py  test_data.py  test_data_annotations.py  test_data_bourguignon2020.py  test_data_epochs.py  test_features_preprocessing.py  test_frequency.py  test_models_classical.py  test_models_nn_archs.py  test_models_training.py  test_pipeline_multiclass.py  test_pipeline_pairwise.py  test_pipeline_run.py  test_utils.py  test_utils_display.py
