[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meg-phone-decoder"
version = "0.1.0"
description = "Phonetic decoding from MEG data – code companion to our paper"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name="Xabier de Zuazo", email="xabier@zuazo.org" }
]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: OS Independent"
]

# Hard runtime deps
dependencies = [
    "mne>=1.6",
    "PyWavelets>=1.4",
    "numpy>=1.23",
    "scipy>=1.11",
    "pandas>=1.3",
    "torch>=2.1",
    "scikit-learn>=1.3,<1.6",
    "textgrid>=1.5",
    "tqdm>=4.66",
    "tabulate>=0.9",
    "termcolor>=2.4",
    "transformers>=4.47",
]

# Optional dev / test extras
[project.optional-dependencies]
dev = [
    "autoflake==2.3.1",
    "bandit==1.8.3",
    "black==25.1.0",
    "blacken-docs==1.19.1",
    "flake8==7.1.2",
    "flake8-pyproject==1.2.3",
    "isort==6.0.1",
    "pydocstringformatter==0.7.3",
    "pydocstyle==6.3.0",
    "pylint==3.3.4",
    "pytest==8.3.5",
    "ruff==0.9.10",
]

[project.urls]
"Homepage" = "https://github.com/hitz-zentroa/meg-phone-decoding"
"Source" = "https://github.com/hitz-zentroa/meg-phone-decoding"

# Entry-point for the CLI
[project.scripts]
mpd-train = "mpd.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.isort]
profile = "black"

[tool.pylint]
disable=["R0801", "W0511"]

[tool.pylint.FORMAT]
max-line-length = 88

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "E701"]

[tool.pycodestyle]
max-line-length = 88
ignore = ["E203", "E701"]
